--- a/Yeni klasör/index.html
+++ b/Yeni klasör/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -26,7 +27,7 @@
                     <button type="button" id="exit" class="btn btn-outline-danger">Çıkış</button>
                     <button type="button" id="nextStage" class="btn btn-outline-success">2. Aşamaya Geç</button>
                     <button type="button" id="tryAgain" class="btn btn-outline-success">Tekrar Dene</button>
-                    <button type="button" id="eye" class="btn btn-outline-primary" data-bs-dismiss="modal">Göz Gezdir</button>
+                    <button type="button" id="eye" class="btn btn-outline-primary">Göz Gezdir</button>
                 </div>
             </div>
             </div>
