--- a/Yeni klasör/twoStage.html
+++ b/Yeni klasör/twoStage.html
@@ -16,8 +16,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Adınız ne?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>
                     <hr>
@@ -25,8 +26,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Benim adım Batuhan:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control" >
                         </div>
                     </div>
                     <hr>
@@ -34,8 +35,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">İsmin ne?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>                       
                     <hr>
@@ -43,8 +45,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">İsmim Batuhan:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control" >
                         </div>
                     </div>                        
                     <hr>
@@ -52,8 +54,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Sen kimsin?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>                     
                     <hr>
@@ -61,8 +64,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Ben Batuhan'ım:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control" >
                         </div>
                     </div> 
                     <hr>
@@ -70,8 +73,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Kaç Yaşındasın?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>
                     <hr>
@@ -79,8 +83,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Ben yirmi yaşındayım:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control" >
                         </div>
                     </div>
                 </div>
@@ -94,8 +98,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Bugün günlerden hangisi?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>
                     <hr>
@@ -103,8 +108,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Bugün Cumartesi:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control" >
                         </div>
                     </div>
                     <hr>
@@ -112,8 +117,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Nerelisin?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>                       
                     <hr>
@@ -121,8 +127,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Ben Türkiyeliyim:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control">
                         </div>
                     </div>                        
                     <hr>
@@ -130,8 +136,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Nerede yaşıyorsun?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>                     
                     <hr>
@@ -139,8 +146,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">İstanbulda yaşıyorum:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control">
                         </div>
                     </div> 
                     <hr>
@@ -148,8 +155,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Nerede yaşıyorsun?</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control" >
+                            <span class="input-group-text" >?</span>
                         </div>
                     </div>                     
                     <hr>
@@ -157,8 +165,8 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Türkiyede yaşıyorum:</span>
                         </div>
-                        <div style="width: 50%;">
-                            <input type="text" class="form-control" />
+                        <div class="w-50">
+                            <input type="text" class="form-control">
                         </div>
                     </div> 
                 </div>
