--- a/Yeni klasör/twoStage.html
+++ b/Yeni klasör/twoStage.html
@@ -24,7 +24,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">Benim adım Batuhan:</span>
+                            <span class="card-text text-primary">Benim adım (Adınız..).</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control" >
@@ -43,7 +43,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">İsmim Batuhan:</span>
+                            <span class="card-text text-primary">İsmim (Adınız..).</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control" >
@@ -62,7 +62,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">Ben Batuhan'ım:</span>
+                            <span class="card-text text-primary">Ben (Adınız...)</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control" >
@@ -81,7 +81,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">Ben yirmi yaşındayım:</span>
+                            <span class="card-text text-primary">Ben yirmi yaşındayım.</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control" >
@@ -106,7 +106,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">Bugün Cumartesi:</span>
+                            <span class="card-text text-primary">Bugün Cumartesi.</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control" >
@@ -125,7 +125,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">Ben Türkiyeliyim:</span>
+                            <span class="card-text text-primary">Ben Türkiyeliyim.</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control">
@@ -144,7 +144,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">İstanbulda yaşıyorum:</span>
+                            <span class="card-text text-primary">İstanbulda yaşıyorum.</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control">
@@ -163,7 +163,7 @@
                     <hr>
                     <div style="display: flex;">
                         <div style="width: 50%;">
-                            <span class="card-text text-primary">Türkiyede yaşıyorum:</span>
+                            <span class="card-text text-primary">Türkiyede yaşıyorum.</span>
                         </div>
                         <div class="w-50">
                             <input type="text" class="form-control">
