--- a/Yeni klasör/twoStage.html
+++ b/Yeni klasör/twoStage.html
@@ -17,8 +17,8 @@
                             <span class="card-text text-primary">Adınız ne?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
-                            <span class="input-group-text" >?</span>
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">?</span>
                         </div>
                     </div>
                     <hr>
@@ -26,8 +26,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Benim adım (Adınız..).</span>
                         </div>
-                        <div class="w-50">
-                            <input type="text" class="form-control" >
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div>
                     <hr>
@@ -36,7 +37,7 @@
                             <span class="card-text text-primary">İsmin ne?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
+                            <input type="text" class="form-control">
                             <span class="input-group-text" >?</span>
                         </div>
                     </div>                       
@@ -45,8 +46,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">İsmim (Adınız..).</span>
                         </div>
-                        <div class="w-50">
-                            <input type="text" class="form-control" >
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div>                        
                     <hr>
@@ -55,7 +57,7 @@
                             <span class="card-text text-primary">Sen kimsin?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
+                            <input type="text" class="form-control">
                             <span class="input-group-text" >?</span>
                         </div>
                     </div>                     
@@ -64,8 +66,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Ben (Adınız...)</span>
                         </div>
-                        <div class="w-50">
-                            <input type="text" class="form-control" >
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div> 
                     <hr>
@@ -74,7 +77,7 @@
                             <span class="card-text text-primary">Kaç Yaşındasın?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
+                            <input type="text" class="form-control">
                             <span class="input-group-text" >?</span>
                         </div>
                     </div>
@@ -83,8 +86,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Ben yirmi yaşındayım.</span>
                         </div>
-                        <div class="w-50">
-                            <input type="text" class="form-control" >
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div>
                 </div>
@@ -99,8 +103,8 @@
                             <span class="card-text text-primary">Bugün günlerden hangisi?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
-                            <span class="input-group-text" >?</span>
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">?</span>
                         </div>
                     </div>
                     <hr>
@@ -108,8 +112,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Bugün Cumartesi.</span>
                         </div>
-                        <div class="w-50">
-                            <input type="text" class="form-control" >
+                        <div class="input-group w-50">
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div>
                     <hr>
@@ -118,8 +123,8 @@
                             <span class="card-text text-primary">Nerelisin?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
-                            <span class="input-group-text" >?</span>
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">?</span>
                         </div>
                     </div>                       
                     <hr>
@@ -127,8 +132,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Ben Türkiyeliyim.</span>
                         </div>
-                        <div class="w-50">
+                        <div class="input-group w-50">
                             <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div>                        
                     <hr>
@@ -137,7 +143,7 @@
                             <span class="card-text text-primary">Nerede yaşıyorsun?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
+                            <input type="text" class="form-control">
                             <span class="input-group-text" >?</span>
                         </div>
                     </div>                     
@@ -146,8 +152,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">İstanbulda yaşıyorum.</span>
                         </div>
-                        <div class="w-50">
+                        <div class="input-group w-50">
                             <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div> 
                     <hr>
@@ -156,8 +163,8 @@
                             <span class="card-text text-primary">Nerede yaşıyorsun?</span>
                         </div>
                         <div class="input-group w-50">
-                            <input type="text" class="form-control" >
-                            <span class="input-group-text" >?</span>
+                            <input type="text" class="form-control">
+                            <span class="input-group-text">?</span>
                         </div>
                     </div>                     
                     <hr>
@@ -165,8 +172,9 @@
                         <div style="width: 50%;">
                             <span class="card-text text-primary">Türkiyede yaşıyorum.</span>
                         </div>
-                        <div class="w-50">
+                        <div class="input-group w-50">
                             <input type="text" class="form-control">
+                            <span class="input-group-text">.</span>
                         </div>
                     </div> 
                 </div>
